Apenas exibe os cards caso sejam exibidos completamente

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "canvasjs-react-charts": "^1.0.5",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-on-screen": "^2.1.1"
   }
 }
