--- a/package.json
+++ b/package.json
@@ -1,22 +1,72 @@
 {
-  "name": "portifolio-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "axios": "^0.20.0",
-    "canvasjs-react-charts": "^1.0.5",
-    "marked": "^1.1.1",
-    "next": "9.5.3",
-    "node-postgres": "^0.6.2",
-    "pg": "^8.3.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-on-screen": "^2.1.1",
-    "sequelize": "^6.3.5"
-  }
+    "name": "codestack-site",
+    "version": "1.0.0",
+    "private": true,
+    "description": "My Personal Website",
+    "author": "Felippe Chemello <felippe@codestack.me>",
+    "repository": "FelippeChemello/codestack",
+    "license": "MIT",
+    "engines": {
+        "node": ">=14"
+    },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "deploy": "vercel --prod",
+        "deps": "run-s deps:*",
+        "deps:update": "[ -z $GITHUB_ACTIONS ] && yarn add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
+        "deps:link": "[ -z $GITHUB_ACTIONS ] && yarn link notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:link on CI'",
+        "analyze": "cross-env ANALYZE=true next build",
+        "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+        "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+        "test": "run-s test:*",
+        "test:lint": "eslint .",
+        "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check",
+        "posttest": "run-s build"
+    },
+    "dependencies": {
+        "classnames": "^2.3.1",
+        "date-fns": "^2.25.0",
+        "got": "^11.8.2",
+        "isomorphic-unfetch": "^3.1.0",
+        "lqip-modern": "^1.2.0",
+        "next": "^11.1.2",
+        "node-fetch": "^2.6.1",
+        "notion-client": "^4.13.0",
+        "notion-types": "^4.10.0",
+        "notion-utils": "^4.12.0",
+        "p-map": "^4.0.0",
+        "p-memoize": "^4.0.0",
+        "react": "^17.0.2",
+        "react-body-classname": "^1.3.1",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
+        "react-notion-x": "^4.13.0",
+        "react-static-tweets": "^0.5.3",
+        "react-use": "^17.2.4",
+        "use-dark-mode": "^2.3.1"
+    },
+    "devDependencies": {
+        "@next/bundle-analyzer": "^11.1.2",
+        "@types/classnames": "^2.3.1",
+        "@types/node": "^16.11.2",
+        "@types/node-fetch": "^3.0.3",
+        "@types/react": "^17.0.31",
+        "@typescript-eslint/eslint-plugin": "^5.1.0",
+        "@typescript-eslint/parser": "^5.1.0",
+        "cross-env": "^7.0.2",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-config-standard-react": "^11.0.1",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^5.1.1",
+        "eslint-plugin-react": "^7.26.1",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.4.1",
+        "typescript": "^4.4.4"
+    }
 }
