--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "repository": "FelippeChemello/codestack",
     "license": "MIT",
     "engines": {
-        "node": ">=14"
+        "node": ">=12"
     },
     "scripts": {
         "dev": "next dev",
@@ -27,11 +27,12 @@
     },
     "dependencies": {
         "classnames": "^2.3.1",
+        "cookie": "^0.4.1",
         "date-fns": "^2.25.0",
         "got": "^11.8.2",
         "isomorphic-unfetch": "^3.1.0",
         "lqip-modern": "^1.2.0",
-        "next": "^11.1.2",
+        "next": "^12",
         "node-fetch": "^2.6.1",
         "notion-client": "^4.13.0",
         "notion-types": "^4.10.0",
@@ -50,6 +51,7 @@
     "devDependencies": {
         "@next/bundle-analyzer": "^11.1.2",
         "@types/classnames": "^2.3.1",
+        "@types/cookie": "^0.4.1",
         "@types/node": "^16.11.2",
         "@types/node-fetch": "^3.0.3",
         "@types/react": "^17.0.31",
